2011-12-16  Richard Guenther  <rguenther@suse.de>

PR lto/51572
	* dwarf2out.c (gen_type_die_with_usage): Use the context of
	the TYPE_DECL as well if it is file-scope.

	* gcc.dg/lto/pr51572-1_0.c: New testcase.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@182401 138bc75d-0d04-0410-961f-82ee72b054a4